--- a/pages/404.html
+++ b/pages/404.html
@@ -1,3 +1,4 @@
-<h1>Ixi, deu ruim.</h1>
-
-<h2>Página não encontrada.</h2>
+<div class="container error-page">
+    <h1>Ixi, deu ruim.</h1>
+    <p>Página não encontrada.</p>
+</div>
