--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,8 @@
-<h1>Explore o universo</h1>
+<div class="container home-page">
+    <h1 class="home-title">Explore o universo</h1>
+    
 
-<button>Quero saber mais</button>
+    <a href="/universe" onclick="route()">
+        <button class="home-button">Quero saber mais</button>
+    </a>
+</div>
